# project-genisis

./: Dockerfile  README.md  justfile  pyproject.toml
docs/: plan.md  question-flow.md  roadmap.md
resources/claude/.claude/agents/: git-master.md  planner.md
src/: config.py  main.py
src/core/: cli.py  errors.py  github.py  scaffold.py
src/resources/claude/: CLAUDE.md
src/resources/claude/.claude/agents/: brainstorm.md  code-reviewer.md  lead-developer.md  pr-manager.md  tdd-dev.md
src/resources/claude/.claude/commands/: brainstorm.md  implement.md  merge.md
tests/: test_cli.py  test_github.py  test_main.py  test_scaffold.py
