[project]
name = "project-genisis"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "questionary>=2.0",
    "cookiecutter>=2.7.1",
]

[project.scripts]
genesis = "src.main:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
artifacts = ["src/resources/**/*"]

[tool.hatch.build.targets.wheel.force-include]
"src/resources" = "src/resources"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true
